--- a/src/style.css
+++ b/src/style.css
@@ -41,17 +41,18 @@ li:first-letter {
   text-transform: capitalize;
 }
 
-div.container {
+/* div.container {
+ 
+ 
+} */
+
+div.weather-app-wrapper {
+  max-width: 600px;
+  margin: 15px auto;
   background: linear-gradient(90deg,
         rgba(63, 174, 228, 1) 0%,
         rgba(157, 209, 242, 1) 100%,
         rgba(0, 212, 255, 1) 35%);
- 
-}
-
-.weather-app-wrapper {
-  max-width: 600px;
-  margin: 15px auto;
 
 }
 
