updated days columns

--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ li:first-letter {
 div.weather-app-wrapper {
   max-width: 600px;
   margin: 15px auto;
+  border-radius:10px ;
   background: linear-gradient(90deg,
         rgba(63, 174, 228, 1) 0%,
         rgba(157, 209, 242, 1) 100%,
