--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,24 @@ div.weather-app {
   background-color: green;
 }
 
+.col-mon {
+  background-color: #d9edfd;
+  border-radius: 100px;
+  width: 100vh;
+  height: 25vh;
+  padding: 2px 8px;
+  margin-bottom: 25px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 0px;
+}
+
+.img-mon {
+  padding-top: 20%;
+  width: 100%;
+  height: 50%;
+}
+
 
 /* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap");
 
