--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,6 @@ ul {
 li {
   list-style: none;
   color: #ffff;
-  /* color: #952; */
   display: block;
   font-size: 16px;
   text-align: left;
@@ -54,11 +53,12 @@ div.weather-app {
   border-radius: 10px;
   padding: 20px;
   height: 85%;
-  border: 1px solid #da8de1;
-  background: linear-gradient(90deg,
+  /* background: linear-gradient(90deg,
         rgba(63, 174, 228, 1) 0%,
         rgba(157, 209, 242, 1) 100%,
-        rgba(0, 212, 255, 1) 35%);
+        rgba(0, 212, 255, 1) 35%), */
+    background-color: #306bac, #6F9CEB,  #98B9F2;
+
   
 }
 
@@ -96,7 +96,7 @@ div.weather-app {
   text-decoration: none;
 }
 .current_button{
-  background-color: green;
+  background-color:#141B41;
 }
 
 .col-mon {
@@ -116,146 +116,4 @@ div.weather-app {
   width: 100%;
   height: 50%;
 }
-
-
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap");
-
-body {
-  font-family: "Open Sans", sans-serif;
-  min-height: 60vh;
-}
-
-div.container {
-  border-radius: 10px;
-  max-width: 600px;
-  align-items: center;
-  padding: 20px auto;
-  margin: 15px auto;
-  height: 95%;
-  background: linear-gradient(
-    90deg,
-    rgba(63, 174, 228, 1) 0%,
-    rgba(157, 209, 242, 1) 100%,
-    rgba(0, 212, 255, 1) 35%
-  );
-}
-
-.cloud-img {
-  width: 8%;
-  height: 90px;
-  position: fixed;
-  top: 200px;
-  left: 600px;
-  right: 800px;
-}
-
-div.city-name {
-  margin: 10px auto;
-  padding-top: 25px;
-  border-radius: 80px;
-}
-
-p {
-  color: white;
-  font-size: 35px;
-  font-weight: bold;
-  padding: 5px;
-  position: relative;
-}
-
-.city {
-  top: 35px;
-  position: relative;
-  padding: 0px;
-}
-
-li {
-  display: block;
-  margin: 0 15px;
-}
-
-footer {
-  text-align: center;
-  margin: 0 auto;
-  padding: 0px;
-  font-size: 10px;
-  color: rgb(159, 156, 156);
-}
-
-.current_city {
-  padding: 0px;
-  list-style: none;
-  font-size: 15px;
-  margin: -20px 20px;
-  right: -420px;
-  top: 50px;
-  bottom: 0px;
-  position: relative;
-}
-
-.city_update {
-  top: 20px;
-  left: -40px;
-  position: relative;
-  margin: 4px;
-}
-
-.city_wind,
-.city_humidity {
-  font-size: 14px;
-  padding: 4px;
-  right: 450px;
-  list-style: none;
-  margin: 0px;
-}
-
-.city_temp {
-  font-size: 50px;
-  margin: 0px;
-}
-
-.container .text-center {
-  color: #fff;
-  height: 28vh;
-  padding: 10px;
-  margin-bottom: auto;
-}
-
-.col-mon {
-  background-color: #d9edfd;
-  border-radius: 100px;
-  width: 100vh;
-  height: 25vh;
-  padding: 2px 8px;
-  margin-bottom: 25px;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 0px;
-}
-
-.img-mon {
-  padding-top: 20%;
-  width: 100%;
-  height: 50%;
-}
-
-.day_current,
-.day_weather {
-  position: right;
-}
-
-.row-temp {
-  font-size: 20px;
-  text-decoration: solid;
-}
-
-.submit-form {
-  margin-bottom: 20px;
-}
-
-.units {
-  position: relative;
-  top: -15px;
-} */
-
 
