--- a/src/style.css
+++ b/src/style.css
@@ -53,11 +53,11 @@ div.weather-app {
   border-radius: 10px;
   padding: 20px;
   height: 85%;
-  /* background: linear-gradient(90deg,
+  background: linear-gradient(90deg,
         rgba(63, 174, 228, 1) 0%,
         rgba(157, 209, 242, 1) 100%,
-        rgba(0, 212, 255, 1) 35%), */
-    background-color: #306bac, #6F9CEB,  #98B9F2;
+        rgba(0, 212, 255, 1) 35%),
+    /* background:liner-gradient (#306bac, #6F9CEB,  #98B9F2; */
 
   
 }
