--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,7 @@ div.weather-app {
         rgba(63, 174, 228, 1) 0%,
         rgba(157, 209, 242, 1) 100%,
         rgba(0, 212, 255, 1) 35%);
+  box-shadow: grey;
     
 
   
